Fix crashing bug with empty rows in table values

When formatting the field value, the number of columns was not being
checked before the first value was accessed, causing a crash when there
were no column values

Add a unit test, as well

BUG: 361622
FIXED-IN: 2.3.12